--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
   <script>
-    window._libreurl = `https://translate.sth.io`
+    window._libreurl = `%API%`
   </script>
 </html>
